--- a/client-myjss/src/app/modules/miscellaneous/components/forms/radio-group-quotation-type/radio-group-quotation-type.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/radio-group-quotation-type/radio-group-quotation-type.component.html
@@ -1,6 +1,7 @@
-<form [formGroup]="form!">
+<form [formGroup]="form!" class="form-check">
   <div *ngFor="let type of types" [formControlName]="propertyName">
-    <input type="radio" [id]="type" name="radio" [value]="type" [checked]="model && model.id === type.id">
-    <label [for]="type"> {{type.label}}</label>
+    <input class="form-check-input" type="radio" [id]="type" name="radio" [value]="type"
+      [checked]="model && model.id === type.id">
+    <label class="form-check-label" [for]="type"> {{type.label}}</label>
   </div>
 </form>
