--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.css
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.css
@@ -10,3 +10,16 @@
     color: rgb(255, 255, 255);
     margin-bottom: 20px;
 }
+
+.navbar-toogler-light {
+    color: var(--ar-secondary);
+}
+
+.navbar-toggler-icon-light, .navbar-toggler-icon-light::before, .navbar-toggler-icon-light::after {
+    background-color: var(--ar-secondary);
+}
+
+
+.jss-navbar-light {
+    background-color: var(--ar-primary);
+}
