--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<header class="fixed-top jss-navbar">
+<header class="fixed-top jss-navbar" [ngClass]="{'jss-navbar-light': isForQuotationNavbar}">
   <div class="container mt-3">
     <div class="row navbar d-flex justify-content-between align-items-center">
 
@@ -8,7 +8,7 @@
           data-bs-target="#navbarCollapse" aria-controls="navbarNav" aria-expanded="false"
           aria-label="Toggle navigation">
           <span class="text-body h6"></span>
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon" [ngClass]="{'navbar-toggler-icon-light': isForQuotationNavbar}"></span>
         </button>
       </div>
 
@@ -16,7 +16,7 @@
       <!-- Logo -->
       <div class="col-4 d-flex justify-content-center">
         <a href="">
-          <img ui-sref='' [src]="logoJss" />
+          <img ui-sref='' [src]="isForQuotationNavbar? logoJssDark: logoJss" />
         </a>
       </div>
 
@@ -24,7 +24,9 @@
       <div class="col-4 d-flex justify-content-end align-items-center">
         <!-- 'Sign In' button visible only on medium to large screens (d-md-block) -->
         <div *ngIf="!currentUser || !currentUser.id" class="d-none d-md-block">
-          <a class="btn btn-outline-light col-md-auto btn-sm" [routerLink]="['/account/signin']" rel="noopener">
+          <a class="btn col-md-auto btn-sm"
+            [ngClass]="{'btn-outline-light': !isForQuotationNavbar, 'btn-outline-dark': isForQuotationNavbar}"
+            [routerLink]="['/account/signin']" rel="noopener">
             Se connecter
           </a>
         </div>
@@ -126,7 +128,7 @@
     </div>
 
 
-    <div *ngIf="!isNavbarCollapsed" class="row d-none d-lg-block">
+    <div *ngIf="isDisplaySecondHeader()" class="row d-none d-lg-block">
       <!-- Navbar collapse (Main navigation) -->
       <nav class="align-items-center navbar-expand" id="navbarNav">
         <ul class="navbar-nav navbar-nav-scroll justify-content-between" style="--ar-scroll-height: 520px;">
