--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.css
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.css
@@ -22,14 +22,13 @@
 .jss-navbar-light {
     background-color: var(--ar-primary);
     --ar-nav-link-color: var(--ar-secondary) !important;
-    --ar-nav-link-hover-color: var(--ar-secondary);
+    --ar-nav-link-hover-color: var(--ar-primary);
     color: var(--ar-secondary) !important;
 }
 
 .jss-navbar-light .nav-link,
 .jss-navbar-light .dropdown-item,
 .jss-navbar-light .fs-xs,
-.jss-navbar-light .fs-sm,
-.jss-navbar-light .btn {
+.jss-navbar-light .fs-sm {
     color: var(--ar-secondary) !important;
 }
