first version first page of quotation

--- a/client-myjss/src/app/modules/miscellaneous/components/forms/radio-group-affaire-type/radio-group-affaire-type.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/radio-group-affaire-type/radio-group-affaire-type.component.html
@@ -1,7 +1,7 @@
-<form [formGroup]="form!">
-  <div *ngFor="let type of types">
-    <input type="radio" [id]="type" [formControlName]="propertyName" [value]="type"
+<form [formGroup]="form!" class="form-check row d-flex flex-row">
+  <div *ngFor="let type of types" class="col pe-5 col-auto">
+    <input class="form-check-input" type="radio" [id]="type" [formControlName]="propertyName" [value]="type"
       [checked]="model && model.id === type.id">
-    <label [for]="type"> {{type.label}}</label>
+    <label class="form-check-label" [for]="type"> {{type.label}}</label>
   </div>
 </form>
