--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -20302,3 +20302,10 @@ h1.secondary-heading,
   backdrop-filter: blur(40px);
   background-color: #1c2d4199;
 }
+
+.quotation-container {
+  background-color: var(--ar-primary);
+  padding: 1.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
