--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -1,24 +1,18 @@
-<section class="pt-5 mt-5 container">
-  <!-- Breadcrumb -->
-  <nav aria-label="breadcrumb">
-    <ol class="pt-lg-5 pb-lg-4 pb-2 breadcrumb">
-      <li class="breadcrumb-item"><a routerLink="/">Accueil</a></li>
-      <li class="breadcrumb-item"><a routerLink="/services/announcement">Nos services</a></li>
-      <li class="breadcrumb-item">
-        <span *ngIf="selectedTab">{{ selectedTab.label }}</span>
-      </li>
-    </ol>
-  </nav>
+<section class="pt-5 mt-5 quotation-breadcrumb">
+  <div class="container">
 
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs " role="tablist">
-    <li class="nav-item" *ngFor="let item of myJssQuotationItems;">
-      <a class="nav-link" [class.active]="item == selectedTab" [routerLink]="item.route">
-        <i class="fi-home me-2 "></i>
-        {{ item.label }}
-      </a>
-    </li>
-  </ul>
+    <h2>{{selectedTab?.label?.substring(2)}}</h2>
+
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs align-items-center d-flex" role="tablist">
+      <li class="nav-item d-flex align-items-center" *ngFor="let item of myJssQuotationItems;">
+        <i class="ai-chevron-right quotation-nav-link me-2 fs-5" *ngIf="item!=myJssQuotationItems[0]"></i>
+        <a class="quotation-nav-link nav-link" [class.active]="item == selectedTab" [routerLink]="item.route">
+          {{ item.label }}
+        </a>
+      </li>
+    </ul>
+  </div>
 </section>
 
 <!-- Content Section -->
