--- a/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
+++ b/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
@@ -217,6 +217,7 @@
   <div class="row justify-content-end m-0" *ngIf="selectedFamilyGroupService">
     <a class="col-md-auto p-md-4" (click)="addAffaire()"><strong>Ajouter</strong></a>
   </div>
+  <!-- TODO : Je pense à mettre sur le composant parent car la barre reste sur l'ensemble du parcours client -->
   <div class="row position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 justify-content-end"
     *ngIf="selectedFamilyGroupService">
     <button type="button" class="btn btn-secondary rounded-1 col-auto mx-5" *ngIf="canStartQuotation()"
