--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
@@ -45,3 +45,13 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 :host ::ng-deep .btn-secondary:hover i {
     color: #2C4057;
 }
+
+::ng-deep .sub-title {
+    margin-top: 2rem;
+    font-weight: 600;
+    opacity: 80%;
+}
+
+:host ::ng-deep input::placeholder {
+    color: var(--ar-gray-600);
+}
