--- a/client/src/app/modules/quotation/components/select-attachments-dialog/select-attachment-dialog.component.html
+++ b/client/src/app/modules/quotation/components/select-attachments-dialog/select-attachment-dialog.component.html
@@ -23,6 +23,8 @@
       </td>
     </tr>
   </table>
+  <generic-textarea [(model)]="attachmentMailRequest.comment" label="Commentaire" [form]="attachmentsForm"
+    propertyName="comment" [isMandatory]="false"></generic-textarea>
   <generic-toggle [(model)]="attachmentMailRequest.sendToMe" label="Me l'envoyer" [form]="attachmentsForm"
     propertyName="sendToMe"></generic-toggle>
 </div>
