--- a/src/main/resources/mails/templates/customer-order-finalization.html
+++ b/src/main/resources/mails/templates/customer-order-finalization.html
@@ -276,11 +276,11 @@
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p><span style="font-size: 18px;">Service
-                                                                        comptabilité</span><br />
+                                                                        facturation</span><br />
                                                                     01 47 03 10 10<br />
                                                                     <a href="" style="text-decoration:underline">
                                                                         <span
-                                                                            style="color:rgb(35, 61, 86);; text-decoration:none">compta@jss.fr</span>
+                                                                            style="color:rgb(35, 61, 86);; text-decoration:none">recouvrement@jss.fr</span>
                                                                     </a>
                                                                 </p>
                                                             </td>
