--- a/src/main/resources/mails/templates/quotation-page.html
+++ b/src/main/resources/mails/templates/quotation-page.html
@@ -206,6 +206,8 @@
                     documents transmis, correspondent à la demande de
                     devis. Toute modification entraînera son
                     actualisation</p>
+                <p style="font-size: 12px;">Les règlements par chèque ne sont plus acceptés et peuvent se faire par
+                    carte bleue ou virement</p>
             </td>
         </tr>
     </table>
