--- a/src/main/resources/mails/templates/send-attanchments.html
+++ b/src/main/resources/mails/templates/send-attanchments.html
@@ -255,6 +255,16 @@
                                                         </tr>
                                                     </table>
                                                     <table width="100%" border="0" cellpadding="0" cellspacing="0"
+                                                        role="presentation" th:if="${explaination}!=null"
+                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;padding-top: 20px;">
+                                                        <tr>
+                                                            <td
+                                                                style="padding-left:10px;padding-right:10px;width:100%;">
+                                                                <p><span th:text="${explaination}"></span></p>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                    <table width="100%" border="0" cellpadding="0" cellspacing="0"
                                                         role="presentation"
                                                         style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;padding-top: 20px;">
                                                         <tr>
