--- a/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
+++ b/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
@@ -13,12 +13,13 @@
     <div *ngIf="!hideFamilyGroupServiceSelection">
       <h6><i class="ai-pen pe-2"></i>Pour quel service ?</h6>
       <div *ngFor="let serviceFamily of familyGroupService" class="btn btn-outline-secondary m-2"
+        [class.active]="quotation.serviceFamilyGroup && serviceFamily.id == quotation.serviceFamilyGroup.id"
         (click)="selectFamilyGroupService(serviceFamily)">
         {{serviceFamily.customLabel}}</div>
     </div>
   </section>
 
-  <div *ngIf="selectedFamilyGroupService">
+  <div *ngIf="quotation.serviceFamilyGroup">
     <div class="quotation-container" *ngFor="let asso of quotation.assoAffaireOrders; let indexAsso = index">
       <div class="row d-flex align-items-center pb-md-3 m-0" (click)=" openPanel(indexAsso)" style="cursor: pointer;">
         <div class="col-auto p-0">
@@ -29,7 +30,7 @@
         </div>
         <div class="col">
           <h6 class="flex-grow-1 mb-0" *ngIf="!(this.quotation.assoAffaireOrders[indexAsso].affaire.siret
-          || this.quotation.assoAffaireOrders[indexAsso].affaire.isIndividual && this.quotation.assoAffaireOrders[indexAsso].affaire.firstname 
+          || this.quotation.assoAffaireOrders[indexAsso].affaire.isIndividual && this.quotation.assoAffaireOrders[indexAsso].affaire.firstname
           || !this.quotation.assoAffaireOrders[indexAsso].affaire.isIndividual && this.quotation.assoAffaireOrders[indexAsso].affaire.denomination
           || this.quotation.assoAffaireOrders[indexAsso].affaire.city
           || this.quotation.assoAffaireOrders[indexAsso].affaire.address)">
@@ -151,7 +152,7 @@
           </div>
 
           <!-- Si type = entreprise -->
-          <div class="mb-3" *ngIf="affaireTypes[indexAsso].id == individual.id">
+          <div class="mb-3" *ngIf="affaireTypes[indexAsso].id == notIndividual.id">
             <generic-input [(model)]="quotation.assoAffaireOrders[indexAsso].affaire.denomination" label="Dénomination"
               [form]="idenficationForm" [propertyName]="'denomination'+indexAsso" [isMandatory]="true"
               [isDisabled]="false" [maxLength]="150">
@@ -159,7 +160,7 @@
           </div>
 
           <!-- Si type = particulier -->
-          <div class="row mb-3" *ngIf="affaireTypes[indexAsso].id == notIndividual.id">
+          <div class="row mb-3" *ngIf="affaireTypes[indexAsso].id == individual.id">
             <div class="col-md-6">
               <generic-input [(model)]="quotation.assoAffaireOrders[indexAsso].affaire.firstname" label="Prénom"
                 [form]="idenficationForm" [propertyName]="'firstname'+indexAsso" [isMandatory]="true"
@@ -214,13 +215,15 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-end m-0" *ngIf="selectedFamilyGroupService">
+  <div class="row justify-content-end m-0" *ngIf="quotation.serviceFamilyGroup">
     <a class="col-md-auto p-md-4" (click)="addAffaire()"><strong>Ajouter</strong></a>
   </div>
-  <!-- TODO : Je pense à mettre sur le composant parent car la barre reste sur l'ensemble du parcours client -->
   <div class="row position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 justify-content-end"
-    *ngIf="selectedFamilyGroupService">
+    *ngIf="quotation.serviceFamilyGroup">
     <button type="button" class="btn btn-secondary rounded-1 col-auto mx-5" *ngIf="canStartQuotation()"
-      (click)="startQuotation()">Démarrer<i class="ai-arrow-right ms-2"></i></button>
+      (click)="startQuotation()">
+      <span class="spinner-grow spinner-grow-sm me-2  text-body-secondary" role="status" aria-hidden="true"
+        *ngIf="isSavingQuotation"></span>
+      Démarrer<i class="ai-arrow-right ms-2"></i></button>
   </div>
 </div>
