--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.css
@@ -20,6 +20,8 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     --ar-nav-tabs-link-active-border-color: #ECF5FF;
     --ar-nav-tabs-link-active-color: #2C4057;
     color: var(--ar-gray-600);
+    border-color: transparent !important;
+    border-bottom-width: 0px;
 }
 
 :host ::ng-deep .btn:hover {
@@ -54,4 +56,35 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 
 :host ::ng-deep input::placeholder {
     color: var(--ar-gray-600);
+}
+
+:host ::ng-deep .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+    border-bottom-color: var(--ar-secondary);
+    border-bottom-width: 3px;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    color: var(--ar-secondary);
+}
+
+:host ::ng-deep .nav-tabs .nav-link, .nav-tabs .nav-item.show .nav-link {
+    color: var(--ar-gray-700);
+    border-radius: 0%;
+    border-bottom-width: 0px;
+}
+
+:host ::ng-deep .white-card {
+    background-color: var(--ar-primary);
+    position: relative;
+    cursor: pointer;
+    border: 3px solid transparent;
+}
+
+:host ::ng-deep .card.selected {
+    border: 3px solid var(--ar-secondary);
+}
+
+:host ::ng-deep .pill {
+    position: relative;
+    z-index: 1;
 }
