--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -5,9 +5,9 @@
 
     <!-- Nav tabs -->
     <ul class="nav nav-tabs align-items-center d-flex" role="tablist">
-      <li class="nav-item d-flex align-items-center" *ngFor="let item of myJssQuotationItems;">
+      <li class="nav-item d-flex align-items-center rounded-4" *ngFor="let item of myJssQuotationItems;">
         <i class="ai-chevron-right quotation-nav-link me-2 fs-5" *ngIf="item!=myJssQuotationItems[0]"></i>
-        <a class="quotation-nav-link nav-link" [class.active]="item == selectedTab" [routerLink]="item.route">
+        <a class="quotation-nav-link nav-link rounded-1" [class.active]="item == selectedTab" [routerLink]="item.route">
           {{ item.label }}
         </a>
       </li>
