--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -1,5 +1,99 @@
 <div class="container">
 
+  <section>
+    <p class="sub-title">Sélectionnez une affaire</p>
+
+    <div class="row mb-5">
+      <!-- Afficher les cartes avec ngFor -->
+      <div *ngFor="let affaire of affaires" class="col-12 col-sm-6 col-lg-4 my-2">
+        <div class="white-card card rounded-1 d-flex flex-column h-100 p-4 "
+          [ngClass]="{'selected': selectedCardId === affaire.id}" (click)="selectCard(affaire.id, $event)">
+          <div class="row d-flex flex-row align-items-center">
+            <i class="ai-briefcase col-1"></i>
+            <h6 class="col m-0">{{ affaire.title }}</h6>
+          </div>
+          <div class="row align-items-center">
+            <!-- Les boutons pills -->
+            <a *ngFor="let button of affaire.services"
+              class="btn btn-secondary rounded-pill mt-2 ms-1 mt-md-3 ms-md-3 col-auto pill">
+              {{ button.label }} <i class="{{ button.icon }} ms-2"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section>
+    <div class="pb-3 row align-items-center">
+      <strong class="col-auto">
+        <ng-container *ngIf="true">
+          <span>10000000000000 - EXEMPLE BIS - 18 BOULEVARD DE LA TRINITÉ</span>
+        </ng-container>
+      </strong>
+      <a class="btn btn-secondary rounded-pill col-auto pill ms-3 fs-xs">Transfert de Diège Hors Ressort
+      </a>
+    </div>
+    <ul class="nav nav-tabs" role="tablist">
+      <li class="nav-item ">
+        <a href="#home" class="nav-link active quotation-tabs" data-bs-toggle="tab" role="tab">
+          Documents
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#profile" class="nav-link" data-bs-toggle="tab" role="tab">
+          Annonces légales
+        </a>
+      </li>
+      <li class="nav-item ">
+        <a href="#home" class="nav-link quotation-tabs" data-bs-toggle="tab" role="tab">
+          Domiciliation
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#profile" class="nav-link" data-bs-toggle="tab" role="tab">
+          Apostille et Légalisation
+        </a>
+      </li>
+      <li class="nav-item ">
+        <a href="#home" class="nav-link quotation-tabs" data-bs-toggle="tab" role="tab">
+          Traduction
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#profile" class="nav-link" data-bs-toggle="tab" role="tab">
+          Certification
+        </a>
+      </li>
+    </ul>
+
+    <!-- Tabs content -->
+    <div class="tab-content quotation-container">
+      <div class="tab-pane fade show active" id="home" role="tabpanel">
+        <div class="pb-3">
+          <generic-input [(model)]="servicesSearched" label="Rechercher" [form]="servicesForm"
+            propertyName="servicesSearched" [isMandatory]="false" [isDisabled]="false" [isDisplayLabel]="false"
+            (onFormChange)="searchServices()" [icon]="'search'"></generic-input>
+        </div>
+        <!-- Stacked checkboxes -->
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="ex-check-1">
+          <label class="form-check-label" for="ex-check-1">Check this checkbox</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="ex-check-2" checked>
+          <label class="form-check-label" for="ex-check-2">Uncheck this checkbox</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="ex-check-3" disabled>
+          <label class="form-check-label" for="ex-check-3">Disabled checkbox</label>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <section class="quotation-container">
     <h6><i class="ai-paperclip pe-2"></i>Pièces justificatives</h6>
     <div class="row">
@@ -9,7 +103,7 @@
             {{doc}}
           </li>
         </ul>
-        <div class="card rounded-1">
+        <div class="blue-card card rounded-1">
           <!-- Ligne 1 : Nom du fichier et icône trash -->
           <div class="row d-flex justify-content-between align-items-center p-1">
             <p class="col-auto mb-0">Nom-du-fichier.pdf</p>
