--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.css
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.css
@@ -9,7 +9,10 @@
 }
 
 .card-img-top {
-  max-height: 20vh;
+  min-height: 20vh;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
 }
 
 .search-result {
@@ -97,4 +100,8 @@
 .custom-scroll-vertical-hover::-webkit-scrollbar-track:vertical {
   background: rgba(255, 255, 255, .2);
   border: none;
+}
+
+.custom-input-group ::ng-deep .form-control {
+  color: var(--ar-blue-dark-bg) !important;
 }
